--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/deliver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://{dbhost}:3306/deliver&useSSL=false
+spring.datasource.username={dbuser}
+spring.datasource.password={dbpass}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
