--- a/server/build.gradle
+++ b/server/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
-	//implementation 'com.h2database:h2'
+	implementation 'com.h2database:h2'
 
 }
 
